# curve-math-equivalence

./: .gitignore  .gitmodules  README.md  pyproject.toml
cryptopool-simulator/3crv/8. gamma-fee_gamma, fee 0.1-0.8, A=5/: results.json
cryptopool-simulator/btcusd-boost/noboost/0. A-gamma w noboost, dyn fee, fee_gamma/: results.json
cryptopool-simulator/btcusd-boost/stableswap/1. A-mid_fee/: make_inputs.py
cryptopool-simulator/cnyusd-boost/2. A-gamma/: plot.py
cryptopool-simulator/tricrypto-resim-fix/mid_fee 0.3/3. gamma-fee_gamma, A0.5/: make_inputs.py
cryptopool-simulator/tricrypto-resim-fix/mid_fee 0.3/4. gamma-fee_gamma, A0.7/: results.json
src/: cpp_wrapper.cpp  test_equivalence.py
