[project]
name = "curve-math-equivalence"
version = "0.1.0"
description = "Equivalence tests for Curve StableSwap math implementations"
requires-python = ">=3.12"

dependencies = [
    "vyper==0.4.2",
    "titanoboa",
    "snekmate==0.1.2rc1",
]

[tool.uv.sources]
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "ac37ac4925eaf4284dd843ca0fa834e7c44a95a7" }

[tool.uv]
dev-dependencies = [
    "pytest==8.2.2",
]